# GPSlocator

./: .gitignore  CMakeLists.txt  README.md
module/: CMakeLists.txt  lib-version.cmake
module/include/: app.h  distance.h  navigation.h  position.h  target.h  userif.h
module/src/: app.c  distance.c  navigation.c  position.c  target.c  userif.c
scripts/: tests.sh
tests/: CMakeLists.txt
tests/data/nmea/: input_001.csv  input_001.nmea  input_err_crc.nmea
tests/unitary-tests/: CMakeLists.txt
tests/unitary-tests/include/: NmeaUtils.hpp  UserIfMock.hpp  gtest_mem_main.hpp
tests/unitary-tests/module/: App_test.cpp  app_tests.cpp  distance_tests.cpp  navigation_tests.cpp  position_tests.cpp  target_tests.cpp  userif_tests.cpp
tests/unitary-tests/src/: NmeaUtils.cpp  UserIfMock.cpp  tests.cpp  unitary_test_system_model_memory.cpp
